// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/classification/ClassifiedBadge should render a classified badge with a tooltip 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="bottom-center"
  text="fubar"
  theme="default"
>
  <h1
    className="bdl-ClassifiedBadge"
  >
    <IconAddTags
      color="#f5b31b"
      height={10}
      strokeWidth={3}
      width={10}
    />
    <span
      className="bdl-ClassifiedBadge-name"
    >
      Confidential
    </span>
  </h1>
</Tooltip>
`;

exports[`features/classification/ClassifiedBadge should render a classified badge with tooltip disabled 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={true}
  position="bottom-center"
  theme="default"
>
  <h1
    className="bdl-ClassifiedBadge"
  >
    <IconAddTags
      color="#f5b31b"
      height={10}
      strokeWidth={3}
      width={10}
    />
    <span
      className="bdl-ClassifiedBadge-name"
    >
      Confidential
    </span>
  </h1>
</Tooltip>
`;
